--- a/app/less/main.less
+++ b/app/less/main.less
@@ -502,6 +502,10 @@ i.label {
 }
 
 
+.hidden-row {
+  display: none!important;
+}
+
 
 //|||||||||||||||||||COMMON ELEMENTS END|||||||||||||||||||//
 
