--- a/app/pug/layouts/work-popup/_vacancies-history.pug
+++ b/app/pug/layouts/work-popup/_vacancies-history.pug
@@ -1,4 +1,6 @@
 .row.vacancies-history.modal-row
+	button.show-more
+		|показать еще 5 вакансий
 	.modal-row__controls
 		p
 			|История вакансий
@@ -98,7 +100,7 @@
 						|Рабочая
 				p
 					|Поля
-		.modal-row__vacancies-history-row
+		.modal-row__vacancies-history-row.hidden-row
 			.modal-row__vacancies-history-labels
 				i.label.attention__label
 					span
@@ -117,7 +119,7 @@
 						|Рабочая
 				p
 					|Свиньи
-		.modal-row__vacancies-history-row
+		.modal-row__vacancies-history-row.hidden-row
 			.modal-row__vacancies-history-labels
 				i.label.success__label
 					span
@@ -136,7 +138,7 @@
 						|Рабочая
 				p
 					|Поля
-		.modal-row__vacancies-history-row
+		.modal-row__vacancies-history-row.hidden-row
 			.modal-row__vacancies-history-labels
 				i.label.success__label
 					span
@@ -155,7 +157,7 @@
 						|Рабочая
 				p
 					|Свиньи
-		.modal-row__vacancies-history-row
+		.modal-row__vacancies-history-row.hidden-row
 			.modal-row__vacancies-history-labels
 				i.label.success__label
 					span
@@ -174,7 +176,7 @@
 						|Рабочая
 				p
 					|Свиньи
-		.modal-row__vacancies-history-row
+		.modal-row__vacancies-history-row.hidden-row
 			.modal-row__vacancies-history-labels
 				i.label.success__label
 					span
@@ -193,7 +195,7 @@
 						|Рабочая
 				p
 					|Свиньи
-		.modal-row__vacancies-history-row
+		.modal-row__vacancies-history-row.hidden-row
 			.modal-row__vacancies-history-labels
 				i.label.success__label
 					span
@@ -212,7 +214,7 @@
 						|Рабочая
 				p
 					|Свиньи
-		.modal-row__vacancies-history-row
+		.modal-row__vacancies-history-row.hidden-row
 			.modal-row__vacancies-history-labels
 				i.label.success__label
 					span
@@ -231,7 +233,7 @@
 						|Рабочая
 				p
 					|Свиньи
-		.modal-row__vacancies-history-row
+		.modal-row__vacancies-history-row.hidden-row
 			.modal-row__vacancies-history-labels
 				i.label.attention__label
 					span
