--- a/app/less/main.less
+++ b/app/less/main.less
@@ -506,6 +506,10 @@ i.label {
   display: none!important;
 }
 
+.hidden-row-opacity {
+  display: none!important;
+}
+
 
 //|||||||||||||||||||COMMON ELEMENTS END|||||||||||||||||||//
 
