--- a/app/pug/layouts/work-popup/_media.pug
+++ b/app/pug/layouts/work-popup/_media.pug
@@ -5,9 +5,12 @@
 		p
 			|Медиа
 		.add-item
-			span
-				|+ 
-			|добавить
+			label.choose(for='add-media')
+				span
+					|+ 
+				|добавить
+			input#add-media.add-media(type='file' name='add-media' multiple='multiple')
+			
 	.modal-row__layer
 		.modal-row__media-wrapper
 			.modal-row__media
@@ -53,4 +56,52 @@
 			.modal-row__media
 				a.modal-row__media-link(href="#" target="_blank")
 					img(src="img/5.png", alt="")
+				span.modal-row__media-remove
+			.modal-row__media
+				a.modal-row__media-link(href="#" target="_blank")
+					img(src="img/1.png", alt="")
+				span.modal-row__media-remove
+			.modal-row__media
+				a.modal-row__media-link(href="#" target="_blank")
+					img(src="img/1.png", alt="")
+				span.modal-row__media-remove
+			.modal-row__media
+				a.modal-row__media-link(href="#" target="_blank")
+					img(src="img/1.png", alt="")
+				span.modal-row__media-remove
+			.modal-row__media
+				a.modal-row__media-link(href="#" target="_blank")
+					img(src="img/1.png", alt="")
+				span.modal-row__media-remove
+			.modal-row__media
+				a.modal-row__media-link(href="#" target="_blank")
+					img(src="img/1.png", alt="")
+				span.modal-row__media-remove
+			.modal-row__media
+				a.modal-row__media-link(href="#" target="_blank")
+					img(src="img/1.png", alt="")
+				span.modal-row__media-remove
+			.modal-row__media
+				a.modal-row__media-link(href="#" target="_blank")
+					img(src="img/1.png", alt="")
+				span.modal-row__media-remove
+			.modal-row__media
+				a.modal-row__media-link(href="#" target="_blank")
+					img(src="img/1.png", alt="")
+				span.modal-row__media-remove
+			.modal-row__media
+				a.modal-row__media-link(href="#" target="_blank")
+					img(src="img/1.png", alt="")
+				span.modal-row__media-remove
+			.modal-row__media
+				a.modal-row__media-link(href="#" target="_blank")
+					img(src="img/1.png", alt="")
+				span.modal-row__media-remove
+			.modal-row__media
+				a.modal-row__media-link(href="#" target="_blank")
+					img(src="img/1.png", alt="")
+				span.modal-row__media-remove
+			.modal-row__media
+				a.modal-row__media-link(href="#" target="_blank")
+					img(src="img/1.png", alt="")
 				span.modal-row__media-remove
