--- a/app/pug/layouts/work-popup/_work-popup.pug
+++ b/app/pug/layouts/work-popup/_work-popup.pug
@@ -152,6 +152,7 @@
 					include _contacts-history
 					include _vacancies-history
 					include _media
+					include _feedback
 #modal-2.modal.micromodal-slide(aria-hidden='true')
 	.modal__overlay(tabindex='-1' data-custom-close="modal-2")
 		.modal__container.contact-history-modal(role='dialog' aria-modal='true' aria-labelledby='modal-1-title')
