--- a/app/pug/layouts/work-popup/_contacts-history.pug
+++ b/app/pug/layouts/work-popup/_contacts-history.pug
@@ -13,6 +13,8 @@
 			.modal-row__contacts-history-manager.modal-row__cell
 				i.tag.manager-tag.dark-blue-tag
 					|AK
+				i.ico
+					+svg2('arrow')
 			.modal-row__contacts-history-date.modal-row__cell
 				time
 					|20.06.2019
@@ -25,6 +27,8 @@
 			.modal-row__contacts-history-manager.modal-row__cell
 				i.tag.manager-tag.dark-blue-tag
 					|AK
+				i.ico
+					+svg2('arrow')
 			.modal-row__contacts-history-date.modal-row__cell
 				time
 					|18.06.2019
@@ -37,6 +41,8 @@
 			.modal-row__contacts-history-manager.modal-row__cell
 				i.tag.manager-tag.light-green-tag
 					|СК
+				i.ico
+					+svg2('arrow')
 			.modal-row__contacts-history-date.modal-row__cell
 				time
 					|03.03.2019
@@ -49,6 +55,8 @@
 			.modal-row__contacts-history-manager.modal-row__cell
 				i.tag.manager-tag.light-green-tag
 					|СК
+				i.ico
+					+svg2('arrow')
 			.modal-row__contacts-history-date.modal-row__cell
 				time
 					|29.02.2019
@@ -61,6 +69,8 @@
 			.modal-row__contacts-history-manager.modal-row__cell
 				i.tag.manager-tag.light-green-tag
 					|СК
+				i.ico
+					+svg2('arrow')
 			.modal-row__contacts-history-date.modal-row__cell
 				time
 					|16.02.2019
@@ -73,6 +83,8 @@
 			.modal-row__contacts-history-manager.modal-row__cell
 				i.tag.manager-tag.light-green-tag
 					|СК
+				i.ico
+					+svg2('arrow')
 			.modal-row__contacts-history-date.modal-row__cell
 				time
 					|16.02.2019
@@ -85,6 +97,8 @@
 			.modal-row__contacts-history-manager.modal-row__cell
 				i.tag.manager-tag.light-green-tag
 					|СК
+				i.ico
+					+svg2('arrow')
 			.modal-row__contacts-history-date.modal-row__cell
 				time
 					|16.02.2019
@@ -97,6 +111,8 @@
 			.modal-row__contacts-history-manager.modal-row__cell
 				i.tag.manager-tag.light-green-tag
 					|СК
+				i.ico
+					+svg2('arrow')
 			.modal-row__contacts-history-date.modal-row__cell
 				time
 					|16.02.2019
@@ -109,6 +125,8 @@
 			.modal-row__contacts-history-manager.modal-row__cell
 				i.tag.manager-tag.light-green-tag
 					|СК
+				i.ico
+					+svg2('arrow')
 			.modal-row__contacts-history-date.modal-row__cell
 				time
 					|16.02.2019
@@ -121,6 +139,8 @@
 			.modal-row__contacts-history-manager.modal-row__cell
 				i.tag.manager-tag.light-green-tag
 					|СК
+				i.ico
+					+svg2('arrow')
 			.modal-row__contacts-history-date.modal-row__cell
 				time
 					|16.02.2019
@@ -133,6 +153,8 @@
 			.modal-row__contacts-history-manager.modal-row__cell
 				i.tag.manager-tag.light-green-tag
 					|СК
+				i.ico
+					+svg2('arrow')
 			.modal-row__contacts-history-date.modal-row__cell
 				time
 					|16.02.2019
@@ -145,6 +167,8 @@
 			.modal-row__contacts-history-manager.modal-row__cell
 				i.tag.manager-tag.light-green-tag
 					|СК
+				i.ico
+					+svg2('arrow')
 			.modal-row__contacts-history-date.modal-row__cell
 				time
 					|16.02.2019
@@ -157,6 +181,8 @@
 			.modal-row__contacts-history-manager.modal-row__cell
 				i.tag.manager-tag.light-green-tag
 					|СК
+				i.ico
+					+svg2('arrow')
 			.modal-row__contacts-history-date.modal-row__cell
 				time
 					|16.02.2019
@@ -169,6 +195,8 @@
 			.modal-row__contacts-history-manager.modal-row__cell
 				i.tag.manager-tag.light-green-tag
 					|СК
+				i.ico
+					+svg2('arrow')
 			.modal-row__contacts-history-date.modal-row__cell
 				time
 					|16.02.2019
@@ -181,6 +209,8 @@
 			.modal-row__contacts-history-manager.modal-row__cell
 				i.tag.manager-tag.light-green-tag
 					|СК
+				i.ico
+					+svg2('arrow')
 			.modal-row__contacts-history-date.modal-row__cell
 				time
 					|16.02.2019
@@ -193,6 +223,8 @@
 			.modal-row__contacts-history-manager.modal-row__cell
 				i.tag.manager-tag.light-green-tag
 					|СК
+				i.ico
+					+svg2('arrow')
 			.modal-row__contacts-history-date.modal-row__cell
 				time
 					|16.02.2019
@@ -205,6 +237,8 @@
 			.modal-row__contacts-history-manager.modal-row__cell
 				i.tag.manager-tag.light-green-tag
 					|СК
+				i.ico
+					+svg2('arrow')
 			.modal-row__contacts-history-date.modal-row__cell
 				time
 					|16.02.2019
@@ -217,6 +251,8 @@
 			.modal-row__contacts-history-manager.modal-row__cell
 				i.tag.manager-tag.light-green-tag
 					|СК
+				i.ico
+					+svg2('arrow')
 			.modal-row__contacts-history-date.modal-row__cell
 				time
 					|16.02.2019
