--- a/app/less/_popup.less
+++ b/app/less/_popup.less
@@ -78,6 +78,69 @@
     }
 }
 
+.work-modal-popup {
+    box-shadow: 4px 3px 6px 0px rgba(@font-color, 0.5);
+    font-size: 12px;
+    line-height: 14/12;
+    display: none;
+    form {
+        height: 100%;
+        padding: 18px;
+        width: auto;
+    }
+
+   label {
+    color: @white;
+    i {
+        margin-right: 8px;
+    }
+   }
+
+    p {
+        color: @white;
+        margin-bottom: 12px;
+        display: block;
+        padding: 0 5px;
+    }
+
+    .confirm-bnt {
+        background: @secondary;
+        display: block;
+        margin: 0 auto;
+        max-width: 80px;
+        border-radius: 3px;
+        color: @main-color;
+        text-align: center;
+        padding: 2px 6px;
+        cursor: pointer;
+        border: 0;
+        width: 100%;
+    }
+
+    .input-group {
+        &:last-of-type {
+            margin-bottom: 15px;
+        }
+    }
+
+    input.find-client {
+        max-width: 145px;
+        border-radius: 3px;
+        margin-bottom: 5px;
+        text-align: left;
+        padding: 2px 6px;
+        margin-left: 24px;
+    }
+
+    // [for="client-feedback-rbtn"] {
+    //     flex-direction: column;
+    //     flex-wrap: wrap;
+    
+    // }
+    
+}
+
+
 
 #type-manufactury-popup {
       fieldset {
