--- a/app/less/main.less
+++ b/app/less/main.less
@@ -258,7 +258,7 @@ main.main {
   color: @white;
   font-weight: 500;
   border-radius: 14px;
-  padding: 3px 5px;
+  padding: 2px 5px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -267,6 +267,15 @@ main.main {
   width: 26px;
   white-space: nowrap;
 }
+
+span.negative {
+  color: @orange;
+}
+
+.number-of-people {
+  text-transform: uppercase;
+}
+
 
 .dark-blue-tag{
   background: @dark-blue;
@@ -324,8 +333,16 @@ i.label {
   background: @orange;
 }
 
+.attention-number {
+  color: @orange;
+}
+
 .label.success__label {
   background: @teal;
+}
+
+.success-number {
+  color: @teal;
 }
 
 .label.success-2__label {
@@ -452,6 +469,20 @@ i.label {
       }
     }
   }
+
+  &.blue {
+    input {
+      & + label {
+        width:  81px;
+      }
+    }
+    input {
+      &:checked + label {
+        color: @white;
+        background: @blue;
+      }
+    }
+  }
 }
 
 
@@ -522,4 +553,10 @@ i.label {
 
 @import url("app/less/_popup.less");
 @import url("app/less/_modal.less");
+
+
+//Vacancy
+@import url("app/less/vacancy/_row.less");
+@import url("app/less/vacancy/_sidebar.less");
+
 @import url("app/less/sprite.less");
