--- a/app/pug/layouts/work-popup/_vacancies-history.pug
+++ b/app/pug/layouts/work-popup/_vacancies-history.pug
@@ -12,6 +12,8 @@
 						|NO
 					span 
 						|293 - 17
+				span.number-of-people.attention-number
+					|М2
 			.modal-row__vacancies-history-date
 				time
 					|03.03.2019  -  03.09.2019
@@ -88,6 +90,8 @@
 						|NO
 					span 
 						|293 - 17
+				span.number-of-people.success-number
+					|М2 Ж6
 			.modal-row__vacancies-history-date
 				time
 					|15.04.2018  -  15.07.2018
