--- a/app/pug/layouts/work-popup/_work-popup.pug
+++ b/app/pug/layouts/work-popup/_work-popup.pug
@@ -21,7 +21,7 @@
 											//- 	i.tag.manager-tag.light-green-tag
 											//- 		|CK
 											//- 	|Светлана
-									.input-group
+									.input-group.add-task-group
 										.input-group__control
 											p
 												|Задачи
@@ -29,7 +29,11 @@
 												span
 													|+ 
 												| добавить
-										textarea(type="text" class="sidebar__task-input" rows="1" data-elastic="true")
+										.add-task-item
+											i.ico
+												+svg2('attention')
+											textarea(type="text" class="sidebar__task-input" rows="1" data-elastic="true")
+											span.delete-task-item
 							.sidebar__notes
 								.input-group
 									textarea(rows="4" class="sidebar__area-notes" data-elastic="true")
@@ -46,22 +50,23 @@
 										.sidebar__filter-wrapper
 											p
 												|История анонсов
-											span.sidebar__filter-remove
+									
 									li.sidebar__filter-item
 										.sidebar__filter-wrapper
 											p
 												|Данные для документов
-											span.sidebar__filter-remove
+									
 									li.sidebar__filter-item
 										.sidebar__filter-wrapper
 											p
 												|Создать вакансию
-											span.sidebar__filter-remove
+										
 									li.sidebar__filter-item
 										.sidebar__filter-wrapper
 											p
 												|Удалить
-											span.sidebar__filter-remove
+											span
+												|20.04.2019
 				.rows
 					.row.common-info.modal-row
 						.common-info__left
@@ -83,6 +88,16 @@
 									textarea.info-area(type="text" rows="2")
 										|Otterveien 1, 9300 Finnsnes, 9300 Finnsnes
 									.map
+										div(style='overflow:hidden;width: 100%;position: relative;')
+											iframe(width='100%' height='200' src='https://maps.google.com/maps?width=100%&height=200&hl=en&q=%D0%96%D0%B8%D1%82%D0%BE%D0%BC%D0%B8%D1%80+(%D0%9D%D0%B0%D0%B7%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5)&ie=UTF8&t=&z=11&iwloc=B&output=embed' frameborder='0' scrolling='no' marginheight='0' marginwidth='0')
+											div(style='position: absolute;width: 80%;bottom: 10px;left: 0;right: 0;margin-left: auto;margin-right: auto;color: #000;text-align: center;')
+												small(style='line-height: 1.8;font-size: 2px;background: #fff;')
+													| Powered by 
+													a(href='https://embedgooglemaps.com/ru/') embedgooglemaps RU
+													|	&amp; 
+													a(href='https://iamsterdamcard.it') i amsterdamcard it
+											style.
+												#gmap_canvas img{max-width:none!important;background:none!important}
 						.common-info__right
 							.common-info__contact-person.common-info__group
 								.common-info__contact-person_curr.common-info__group_small.info-block
@@ -157,30 +172,32 @@
 	.modal__overlay(tabindex='-1' data-custom-close="modal-2")
 		.modal__container.contact-history-modal(role='dialog' aria-modal='true' aria-labelledby='modal-1-title')
 			.contact-history-modal__header
-				.contact-history-modal__block
+				.contact-history-modal__block.manager-block
 					p
 						|Менеджер
 					.input-group
-						select(name="")
-				.contact-history-modal__block
+						select.manager-select(name="manager-select")
+				.contact-history-modal__block.direction-block
 					p
 						|Направление
 					.input-group
-						.button
+						i.ico
 							+svg2('arrow')
-				.contact-history-modal__block
+				.contact-history-modal__block.date-block
 					p
 						|Дата
 					.input-group
-						input(type="date")
-				.contact-history-modal__block
+						input(type="text")
+				.contact-history-modal__block.contact-type-block
 					p
 						|Тип контакта
 					.input-group
-						select(name="")
+						select.contact-select(name="contact-select")
 			.contact-history-modal__body
 				.contact-history-modal__block
 					p
 						|Содержание
 					.input-group
 						textarea.info-area(type="text" rows="12")
+			button.confirm-btn
+				|OK
