--- a/app/less/_var.less
+++ b/app/less/_var.less
@@ -16,8 +16,17 @@
 @sky-blue: #EEFDFF;
 @grass-green: #99CC33;
 @red: #FF0000;
+@hot: #E37373;
+@medium: #FFBBBB;
+
+@creame-orange: #ED6856;
+@brown: #CC6633;
+
+@gray: #B2B2B2;
 
 
 @hover_main-color: #d1eaff66;
 @hover_color: #daeeff; 
 @hover_row: #dce9f6;
+
+@ligth-gray: #E5E5E5;
