--- a/app/pug/layouts/vacancy/row.pug
+++ b/app/pug/layouts/vacancy/row.pug
@@ -1,25 +1,120 @@
 .row(data-custom-open="modal-1")
 	.f-container
-		.row__terms.row__cell
-		.row__labels.row__cell
-			i.row__flag
-				+svg2('flag-norway')
-			p.row__abbr
-				|NO
+		.row__terms.row__cell.hot
+		.row__labels-2.row__cell
+			i.label.attention__label
+				span
+					|NO
+				span 
+					|118 - 22
+			span.number-of-people.attention-number
+					|М12 Ж5
 		.row__indicators.row__cell
-			p
-				|Thompson Equestrian Partners
-		.row__name.row__cell
+			span.row__indicator.empty
+			span.row__indicator.empty
+			span.row__indicator.empty
+			span.row__indicator.empty
+			span.row__indicator.empty
+			span.row__indicator.empty
+		.row__name-2.row__cell
 			p.row__fullname
 				|Thompson Equestrian Partners / Junction Engineering
-				i.tag.manager-tag.dark-blue-tag
-					|AK
+			i.tag.manager-tag.dark-blue-tag
+				|AK
 		.row__vacancies.row__cell
-			i
-				+svg2('phone')
+		.row__notes.row__cell
 			p
-				a(href="tel:+4777847243")
-					|+47 77847243
+				|14.11.2019 - 15.04.2020 (6 мес)
+	.row__full-info.table-full
+		.table-full__choosen
+			.table-full__row.f-container
+				.table-full__cell.row__cell.cell-names
+					p
+						|Гурківський Олександр
+				.table-full__cell.row__cell.cell-status
+					.cell-status__left
+						p.status.choosen
+							|Подготовка CV
+						p.status.choosen
+							|CV отправлено
+						p.status.ready
+							|Утвержден
+						p.status.ready
+							|Контракт подписан
+						p.status.wait
+							|Подан в визовый центр
+						p.status.department
+							|Получил разрешение
+						p.status.department
+							|Забрал разрешение
+						p.status.department
+							|Билеты куплены
+						p.status.busy
+							|Трудоустроен
+					.cell-statu__right
+				.table-full__cell.row__cell.cell-exp
+				.table-full__cell.row__cell.cell-notes
+			.table-full__row.f-container
+				.table-full__cell.row__cell.cell-names
+					p
+						|Лемешко Аліна
+				.table-full__cell.row__cell.cell-status
+				.table-full__cell.row__cell.cell-exp
+				.table-full__cell.row__cell.cell-notes
+			.table-full__row.f-container
+				.table-full__cell.row__cell.cell-names
+					p
+						|Романов Валентин
+				.table-full__cell.row__cell.cell-status
+				.table-full__cell.row__cell.cell-exp
+				.table-full__cell.row__cell.cell-notes
+			.table-full__row.f-container
+				.table-full__cell.row__cell.cell-names
+					p
+						|Тарасюк Віталій
+				.table-full__cell.row__cell.cell-status
+				.table-full__cell.row__cell.cell-exp
+				.table-full__cell.row__cell.cell-notes
+			.table-full__row.f-container
+				.table-full__cell.row__cell.cell-names
+					p
+						|Бичківська Алла
+				.table-full__cell.row__cell.cell-status
+				.table-full__cell.row__cell.cell-exp
+				.table-full__cell.row__cell.cell-notes
+		.table-full__ready
+		.table-full__wait
+		.table-full__department
+		.table-full__busy
+
+.row(data-custom-open="modal-1")
+	.f-container
+		.row__terms.row__cell.medium
+		.row__labels-2.row__cell
+			i.label.attention__label
+				span
+					|DE
+				span 
+					|18 - 5
+		.row__indicators.row__cell
+			span.row__indicator.decline
+				|4
+			span.row__indicator.choosen
+				|8
+			span.row__indicator.ready
+				|5
+			span.row__indicator.wait
+				|12
+			span.row__indicator.department
+				|3
+			span.row__indicator.busy
+				|2
+		.row__name-2.row__cell
+			p.row__fullname
+				|Gustav Schlüter Gmbh
+			i.tag.manager-tag.light-green-tag
+				|CK
+		.row__vacancies.row__cell
 		.row__notes.row__cell
 			p
 				|14.11.2019 - 15.04.2020 (6 мес)
