--- a/app/less/_row.less
+++ b/app/less/_row.less
@@ -1,7 +1,8 @@
 .row {
 	cursor: pointer;
 	width: 100%;
-	height: 44px;
+	// height: 44px;
+
 	&:nth-child(even) {
 		background: @light-blue;
 			&:hover {
@@ -12,7 +13,7 @@
 
 
 	.f-container {
-		height: 100%;
+		height: 44px;
 		flex-wrap: nowrap;
 	}
 	transition: background 0.05s linear;
@@ -30,6 +31,7 @@
 	height: 100%;
 	padding: 13px;
 	width: 100%;
+	letter-spacing: -0.05px;
 	display: flex;
 	align-items: center;
 	justify-content: flex-start;
@@ -40,6 +42,7 @@
 	 text-overflow: ellipsis;
 	 overflow: hidden;
 	 white-space: nowrap;
+
 	 }
 	
 }
