--- a/app/vacancy.pug
+++ b/app/vacancy.pug
@@ -41,7 +41,7 @@ block content
 			include pug/layouts/vacancy/row
 			include pug/layouts/vacancy/row
 	//- include pug/layouts/vacancy/_popup
-	include pug/layouts/_popup
+	include pug/layouts/vacancy/_popup
 			//- include pug/layouts/header
 			//- include pug/layouts/footer
 
